# PeakRDL-cpp

./: .gitignore  LICENSE.generated-output-exception  MANIFEST.in  PERMISSION.generated-output-exception  PLAN.md  README.md  RELEASE.md  USER_API.md  pyproject.toml
.github/workflows/: publish-pypi.yml
doc/: VERSION_HISTORY.md
examples/basic/: HPP_WALKTHROUGH.md  README.md  design.rdl  main.cpp
examples/wide64_32/: design.rdl  wide64_32_regs.hpp
src/peakrdl_cpp/: __init__.py  __peakrdl__.py  exporter.py
tests/: test_exporter.py  test_exporter_adaptive.py  test_exporter_bit_field.py  test_exporter_enum.py
tests/fixtures/rdl/enum/: design.rdl
tests/fixtures/rdl/koe/: abc.rdl
tests/fixtures/rdl/long_full_feature/: design.rdl
tests/fixtures/rdl/test_1/: design.rdl
tests/fixtures/rdl/test_2/: test_2.rdl
